TestSuite/PascalABCTests/errors/err0362_autoclass_same_varnames.pas
type
  T = auto class
    public a1: integer;
    procedure p;
    begin
      
    end;
    public a1: integer;
  end;

begin
  
end.